--- a/Notebook/fine-tuning-llama.ipynb
+++ b/Notebook/fine-tuning-llama.ipynb
@@ -25,6 +25,7 @@
     "# Import required modules for model management, dataset handling, and fine-tuning\n",
     "import torch\n",
     "from unsloth import FastLanguageModel  # High-performance language model utilities\n",
+    "from unsloth.chat_templates import get_chat_template",
     "from datasets import load_dataset  # For loading datasets\n",
     "from trl import SFTTrainer  # Supervised fine-tuning trainer\n",
     "from transformers import TrainingArguments  # Configuration for training process\n",
