--- a/Notebook/fine-tuning-llama.ipynb
+++ b/Notebook/fine-tuning-llama.ipynb
@@ -144,7 +144,7 @@
     "model, tokenizer = FastLanguageModel.from_pretrained(\n",
     "    model_name=model_path,\n",
     "    max_seq_length=2048,\n",
-    "    load_in_4bit=True,  # Use 4-bit precision\n",
+    "    load_in_4bit=True,\n",
     ")\n"
    ]
   },
@@ -189,7 +189,11 @@
     "model.to(device)  # Move the model to the appropriate device\n",
     "\n",
     "# Define an input prompt for text generation\n",
-    "input_prompt = \"Once upon a time\"\n",
+    "input_prompt = \"\"\"I am 25 years old, earning $50,000 per year. I have $5,000 in credit card \n",
+    "    debt at 18% interest, $10,000 in student loans at 5% interest, and $2,000 in savings. \n",
+    "    I want to buy a house within the next 5 years, but I also need to save for retirement. \n",
+    "    How should I prioritize paying off my debt, saving for a down payment, and investing \n",
+    "    for retirement?\"\"\"\n",
     "\n",
     "# Tokenize the input prompt with padding and truncation\n",
     "inputs = tokenizer(\n",
