--- a/Notebook/fine-tuning-llama.ipynb
+++ b/Notebook/fine-tuning-llama.ipynb
@@ -175,7 +175,7 @@
     "model, tokenizer = FastLanguageModel.from_pretrained(\n",
     "    model_name=model_path,\n",
     "    max_seq_length=2048,\n",
-    "    load_in_4bit=True,  # Use 4-bit precision\n",
+    "    load_in_4bit=True,\n",
     ")\n",
     "\n",
     "# Enable optimized inference\n",
