--- a/Notebook/fine-tuning-llama.ipynb
+++ b/Notebook/fine-tuning-llama.ipynb
@@ -76,7 +76,7 @@
     "tokenizer = get_chat_template(tokenizer, chat_template=\"llama-3.1\")\n",
     "\n",
     "# Load the dataset and select the training split\n",
-    "dataset = load_dataset(\"mlabonne/FineTome-100k\", split=\"train\")\n",
+    "dataset = load_dataset(\"../data/sample_dataset.json\", split=\"train\")\n",
     "\n",
     "# Standardize the dataset using ShareGPT format and prepare input text using templates\n",
     "dataset = standardize_sharegpt(dataset)\n",
