Improved training dataset

--- a/Notebook/fine-tuning-llama.ipynb
+++ b/Notebook/fine-tuning-llama.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Install necessary libraries for language model fine-tuning and inference\n",
+    "# Install requried libraries for language model fine-tuning and inference\n",
     "!pip install unsloth  # Core library for model management\n",
     "!pip install torch  # PyTorch library for GPU-accelerated training and inference\n",
     "!pip install transformers  # Hugging Face library for NLP model handling\n",
@@ -19,17 +19,19 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1bd35f72-d60f-4bae-b6f0-9ba07f625f4b",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# Import required modules for model management, dataset handling, and fine-tuning\n",
     "import torch\n",
     "from unsloth import FastLanguageModel  # High-performance language model utilities\n",
-    "from unsloth.chat_templates import get_chat_template\n",
+    "from unsloth.chat_templates import get_chat_template  # Chat template utility\n",
     "from datasets import load_dataset  # For loading datasets\n",
     "from trl import SFTTrainer  # Supervised fine-tuning trainer\n",
     "from transformers import TrainingArguments  # Configuration for training process\n",
-    "from unsloth.chat_templates import get_chat_template, standardize_sharegpt  # Chat template utilities\n"
+    "from unsloth.chat_templates import standardize_sharegpt  # Dataset standardization\n"
    ]
   },
   {
@@ -39,7 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load a pre-trained Llama-3.2 model with 3 billion parameters, optimized for instruction following\n",
+    "# Load the pre-trained Llama-3.2 model with 3 billion parameters, optimized for instruction following\n",
     "model, tokenizer = FastLanguageModel.from_pretrained(\n",
     "    model_name=\"unsloth/Llama-3.2-3B-Instruct\",\n",
     "    max_seq_length=2048,\n",
@@ -54,12 +56,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Apply Parameter-Efficient Fine-Tuning (PEFT) to reduce training resource requirements\n",
+    "# Apply PEFT to reduce training resource requirements\n",
     "model = FastLanguageModel.get_peft_model(\n",
     "    model,\n",
-    "    r=16,  # Bottleneck dimension for fine-tuning\n",
+    "    r=16, # Bottleneck dimension for fine-tuning\n",
     "    target_modules=[\n",
-    "        \"q_proj\", \"k_proj\", \"v_proj\", \"o_proj\",  # Attention projection layers\n",
+    "        \"q_proj\", \"k_proj\", \"v_proj\", \"o_proj\", # Attention projection layers\n",
     "        \"gate_proj\", \"up_proj\", \"down_proj\",  # Feedforward layers\n",
     "    ],\n",
     ")\n"
@@ -76,7 +78,7 @@
     "tokenizer = get_chat_template(tokenizer, chat_template=\"llama-3.1\")\n",
     "\n",
     "# Load the dataset and select the training split\n",
-    "dataset = load_dataset(\"../data/sample_dataset.json\", split=\"train\")\n",
+    "dataset = load_dataset(\"json\", data_files=\"../data/formatted_dataset.json\", split=\"train\")\n",
     "\n",
     "# Standardize the dataset using ShareGPT format and prepare input text using templates\n",
     "dataset = standardize_sharegpt(dataset)\n",
@@ -105,15 +107,15 @@
     "    dataset_text_field=\"text\",\n",
     "    max_seq_length=2048,\n",
     "    args=TrainingArguments(\n",
-    "        per_device_train_batch_size=2,  # Batch size per device\n",
-    "        gradient_accumulation_steps=4,  # Accumulate gradients over 4 steps\n",
-    "        warmup_steps=5,  # Warm-up steps for learning rate\n",
-    "        max_steps=60,  # Total training steps\n",
-    "        learning_rate=2e-4,  # Learning rate\n",
-    "        fp16=not torch.cuda.is_bf16_supported(),  # Use FP16 if BF16 not supported\n",
-    "        bf16=torch.cuda.is_bf16_supported(),  # Use BF16 if supported\n",
-    "        logging_steps=1,  # Log every step\n",
-    "        output_dir=\"outputs\",  # Directory for saving outputs\n",
+    "        per_device_train_batch_size=2, # Batch size per device\n",
+    "        gradient_accumulation_steps=4, # Accumulate gradients over 4 steps\n",
+    "        warmup_steps=5, # Warm-up steps for learning rate\n",
+    "        max_steps=60, # Total training steps\n",
+    "        learning_rate=2e-4, # Learning rate\n",
+    "        fp16=not torch.cuda.is_bf16_supported(), # Use FP16 if BF16 not supported\n",
+    "        bf16=torch.cuda.is_bf16_supported(), # Use BF16 if supported\n",
+    "        logging_steps=1, # Log every step\n",
+    "        output_dir=\"outputs\", # Directory for saving outputs\n",
     "    ),\n",
     ")\n"
    ]
@@ -240,7 +242,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
